--- a/style.css
+++ b/style.css
@@ -59,3 +59,10 @@ body {
   color: #1d4ed8;
   text-decoration: underline;
 }
+
+#viewDiv {
+  padding: 0;
+  margin: 0;
+  height: 400px;
+  width: 100%;
+}
